complete shell script, completed first page and certificate and new file finalRecord.pdf shall be created

--- a/firstPageAndCertificate.tex
+++ b/firstPageAndCertificate.tex
@@ -68,7 +68,21 @@ Year of Admission& :& \rule{4in}{.5pt} \\
 	{\centering \LARGE{CERTIFICATE\\}}
 \end{center}
 	\par
-	Certified that this is the Bonafide Clinical Physiology Practical Record Book of Ms/Mr. \rule{3.5in}{.5pt}who has undergone First Year MBBS course, during the period from \rule{1in}{.5pt} to \rule{1in}{.5pt}.  His / Her work has been Satisfactory / Good.
+	Certified that this is the Bonafide Clinical Physiology Practical Record Book of Ms/Mr. \rule{3.5in}{.5pt}who has undergone First Year MBBS course, during the period from \rule{1in}{.5pt} to \rule{1in}{.5pt}.  His / Her work has been Satisfactory / Good.\\
+
+
+\begin{table}[H]
+ \renewcommand{\arraystretch}{.6} \centering
+ \resizebox{\textwidth}{!}{%
+	 \begin{tabular}{p{.65\textwidth}p{.35\textwidth}}
+		 \textbf{Asst.Professor}, &\textbf{Professor \& Head,}\\ 
+		 \textbf{Department of Physiology} &\textbf{Department of Physiology} 
+\end{tabular}
+ }
+ \end{table}
+
+\noindent \textbf{Date} :\\
+\textbf{Place}:\\
 \vspace*{\fill}
 \end{document}
 
