--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -60,7 +60,7 @@
 
 	\begin{document}
 	\pagenumbering{roman}
-	\tableofcontents
+	%\tableofcontents
 	%\pdfrender{StrokeColor=black,TextRenderingMode=2,LineWidth=0.1pt}
 	\afterpage{\blankpage}
 %-----------------------}}}
@@ -121,8 +121,8 @@
 
 			\item{Source of illumination \newline
 				\par Light source may be internal or external.
-				\par Internal source –In modern microscopes, there is an in-built light source with an electrical tungsten lamp, which is placed directly under the stage.
-				\par External source – This can be from an electric lamp housed in a lamp box with a window or from the sun. The rays of light are reflected by a mirror towards the object. The mirror is located at the base of the microscope which is plain or concave.}
+				\par \textit{Internal source} –In modern microscopes, there is an in-built light source with an electrical tungsten lamp, which is placed directly under the stage.
+				\par \textit{External source} – This can be from an electric lamp housed in a lamp box with a window or from the sun. The rays of light are reflected by a mirror towards the object. The mirror is located at the base of the microscope which is plain or concave.}
 			\item{Condenser
 				\par It focuses the rays of light reflected from the mirror onto the object under observation and helps in resolving the image. It is mounted below the stage of the microscope. Position of the condenser has to be adjusted according to the objective lens used.}
 			\item{Iris diaphragm
@@ -139,7 +139,7 @@
 				\par Three objective lenses are fitted to the lower end of the body tube in the revolving nose piece. They are the low power, high power and oil immersion objective lenses. The desired objective lens is placed close to object on the stage and it produces a real magnified and inverted primary image. When the oil immersion objective is used, the space between the object and the lens is filled with cedar wood oil which has the same refractive index as that of glass and hence prevents refraction of light.\newline
 				\begin{tabular}{c | c | c | c}
 					\hline
-					Objective & Working Distance & Numerical Aperture &Magnification\\
+					\textbf{Objective} & \textbf{Working Distance} & \textbf{Numerical Aperture} &\textbf{Magnification}\\
 					\hline
 					Low Power & 5 to 15 $mm$ & 0.3 & 10\\
 					\hline
@@ -432,7 +432,7 @@
 					Number of cells in 1 $mm^3$ of un diluted blood 	= n $\times$ 50 $\times$ 200  \newline\vspace{.4cm}
 
 					\section*{Result}
-					RBC  count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
+					RBC  count in the given  blood sample is $\rule{5cm}{0.5pt}$ cells / $mm^3$
 					\section*{Questions}
 					\begin{enumerate}
 
@@ -459,9 +459,9 @@
 					\section*{Turk's Fluid Composition}
 					\begin{tabular}{l c l}
 
-						1\% Glacial Acetic Acid	&	-&	1.5 ml - Lyses RBCs without affecting WBCs\\
-						Gentian Violet&			-&	1.5 ml - Stains nuclei of WBCs\\
-						Distilled Water&		-&	100 ml - Acts as solvent\\
+						1\% Glacial Acetic Acid	&	-&	1.5 $ml$ - Lyses RBCs without affecting WBCs\\
+						Gentian Violet&			-&	1.5 $ml$ - Stains nuclei of WBCs\\
+						Distilled Water&		-&	100 $ml$ - Acts as solvent\\
 
 					\end{tabular}
 					\section*{Procedure}
@@ -482,7 +482,7 @@
 
 					\section *{Result}
 
-					WBC count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
+					WBC count in the given  blood sample is $\rule{5cm}{0.5pt}$ cells / $mm^3$
 
 					\section*{Questions}
 
@@ -528,7 +528,7 @@
 					=	n$\times$$\frac{100}{9}$
 					\section*{Result}
 
-					Absolute Eosinophil count in the given  blood sample is $\rule{5cm}{0.1cm}$ cells / $mm^3$
+					Absolute Eosinophil count in the given  blood sample is $\rule{3cm}{0.5pt}$ cells / $mm^3$
 
 					\section*{Questions}
 					\begin{enumerate}
@@ -555,7 +555,7 @@
 					\section*{Leishman's Stain Composition \& Functions}
 					Methylene blue (basic) 	     -	Stains acidic granules in cytoplasm especially 						granules of basophils and Nuclei of leucocytes.\newline
 					Eosin (acidic) 		     -	Stains cytoplasm, basic granules in 							cytoplasm, Hemoglobin of RBCs.\newline
-					Acetone free methyl alcohol - 	Fixes the cells (Acetone free methyl alcohol 						is used as acetone is a lipid solvent that 		lyses cell membrane).\newline 
+					Acetone free methyl alcohol - 	Fixes the cells (Acetone free methyl alcohol 						is used as acetone is a lipid solvent that 		lyses cell membrane).
 
 					\section*{Procedure}
 
@@ -592,12 +592,12 @@
 							Under aseptic precautions, prick the finger. Discard the first drop of blood. Place the slide on the table and support with left hand. Place the blood drop on the right end, one cm away from the edge. Place the spreader slide just in front of the blood drop. Draw the spreader slide backwards to touch the drop. The blood spreads across the edge of the spreader. Draw the spreader slide forward at an angle of 45$^{\circ}$ with a smooth, fast and firm movement to make a thin tongue shaped blood smear. Too thick, thin or a patchy smear is to be avoided. Air dry the smear quickly.
 
 							\section*{Result}
-							The differential count of WBCs in the blood sample is as follows.\newline\vspace{.5cm}
-							Neutrophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
-							Eosinophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
-							Basophil = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
-							Lymphocyte = $\rule{5cm}{0.1cm}$ \%\newline\vspace{.5cm}
-							Monocyte =$\rule{5cm}{0.1cm}$ \%
+							The differential count of WBCs in the blood sample is as follows.\vspace{.5cm}\\
+							Neutrophil = $\rule{5cm}{0.5pt}$ \%\vspace{.5cm}\\
+							Eosinophil = $\rule{5cm}{0.5pt}$ \%\vspace{.5cm}\\
+							Basophil = $\rule{5cm}{0.5pt}$ \%\vspace{.5cm}\\
+							Lymphocyte = $\rule{5cm}{0.5pt}$ \%\vspace{.5cm}\\
+							Monocyte =$\rule{5cm}{0.5pt}$ \%
 
 							\section*{Questions}
 							\begin{enumerate}
@@ -615,7 +615,7 @@
 							A leukocyte is identified by its size, nucleus, cytoplasm and granules.
 							\\
 							\begin{center}
-								\begin{tabularx}{\textwidth}{|*{5}{m{.2\textwidth}|X|}}
+								\begin{tabularx}{\textwidth}{|*{5}{p{.2\textwidth}|X|}}
 									%{|c|c|X|X|c|}
 									\hline
 									\textbf{Cell type}&
@@ -695,7 +695,7 @@
 								\section*{Description Of The Apparatus}
 								The hemoglobinometer is a rectangular cubic box consisting of a central compartment to accommodate the ‘Hemoglobin tube’ and two yellow brown coloured cylindrical rods on either side as comparators. The Hb tube is graduated in percentage on one side and in gram percentage on the other side.
 
-								The hemoglobin pipette has a single mark on the stem which corresponds to 0.02 ml or 20 cubic mm. A glass stirrer is provided for thorough mixing while diluting acid hematin solution.
+								The hemoglobin pipette has a single mark on the stem which corresponds to 0.02 $ml$ or 20 $mm^{3}$. A glass stirrer is provided for thorough mixing while diluting acid hematin solution.
 								\section*{Procedure}
 								\begin{enumerate}
 									\item{Fill the hemoglobin tube with $\frac{N}{10}$ HCl up-to its lowest mark (2 $g$\%).}
@@ -709,7 +709,7 @@
 									\item{Note down the final reading. (Lower meniscus).}
 								\end{enumerate}
 								\section*{Result}
-								The Hb content of the given sample of blood is $\rule{5cm}{0.1cm}$ $g$\%
+								The Hb content of the given sample of blood is $\rule{5cm}{0.5pt}$ $g$\%
 								\section*{Questions}
 								\begin{enumerate}
 									\item{What are the other methods used to estimate Hb content of blood?}
@@ -759,7 +759,7 @@
 										\item{If there is doubt regarding agglutination, confirm it under the microscope.}
 									\end{enumerate}
 									\section*{Result}
-									The blood group of the subject is $\rule{5cm}{0.1cm}$
+									The blood group of the subject is $\rule{5cm}{0.5pt}$
 									\section*{Questions}
 									\begin{enumerate}
 										\item{State Landsteiner’s law.}
