--- a/customTOC.tex
+++ b/customTOC.tex
@@ -7,23 +7,23 @@
 \begin{table}[H]
  \renewcommand{\arraystretch}{2.5} \centering
  \resizebox{\textwidth}{!}{%
- \begin{tabular}{|l|l|p{3in}|l|c|}
+ \begin{tabular}{|c|l|p{3in}|l|c|}
  \hline
 \textbf{S.No} & \textbf{Date} & \centering {\textbf{Experiment}} & \textbf{Signature} & \textbf{Page} \\ \hline
-& & Compound Microscope & & 1 \\ \hline
-& & Hemocytometer & & 5 \\ \hline
-& & Estimation Of Total RBC Count & & 9 \\ \hline
-& & Estimation Of Total WBC Count & & 11 \\ \hline
-& & Absolute Eosinophil Count & & 13 \\ \hline
-& & Differential Count & & 15 \\ \hline
-& & Hemoglobin Estimation & & 19 \\ \hline
-& & Blood Grouping \& Typing & & 21 \\ \hline
-& & Estimation Of Bleeding Time & & 23 \\ \hline
-& & Estimation Of Clotting Time & & 25 \\ \hline
-& & Estimation Of Erythrocyte Sedimentation Rate & & 27 \\ \hline
-& & Packed Cell Volume & & 29 \\ \hline
-& & Osmotic Fragility & & 31 \\ \hline
-& & Specific Gravity & & 33 \\ \hline
+1 & & Compound Microscope & & 1 \\ \hline
+2 & & Hemocytometer & & 5 \\ \hline
+3 & & Estimation Of Total RBC Count & & 9 \\ \hline
+4 & & Estimation Of Total WBC Count & & 11 \\ \hline
+5 & & Absolute Eosinophil Count & & 13 \\ \hline
+6 & & Differential Count & & 15 \\ \hline
+7 & & Hemoglobin Estimation & & 19 \\ \hline
+8 & & Blood Grouping \& Typing & & 21 \\ \hline
+9 & & Estimation Of Bleeding Time & & 23 \\ \hline
+10 & & Estimation Of Clotting Time & & 25 \\ \hline
+11 & & Estimation Of Erythrocyte Sedimentation Rate & & 27 \\ \hline
+12 & & Packed Cell Volume & & 29 \\ \hline
+13 & & Osmotic Fragility & & 31 \\ \hline
+14 & & Specific Gravity & & 33 \\ \hline
 \end{tabular}
  }
  \end{table}
@@ -33,24 +33,24 @@
 \begin{table}[H]
  \renewcommand{\arraystretch}{2.5} \centering
  \resizebox{\textwidth}{!}{%
- \begin{tabular}{|l|l|p{3in}|l|c|}
+ \begin{tabular}{|c|l|p{3in}|l|c|}
  \hline
 \textbf{S.No} & \textbf{Date} & \centering \textbf{Experiment} & \textbf{Signature} & \textbf{Page} \\ \hline
-& & General Examination & & 37 \\ \hline
-& & Examination Of Respiratory System & & 43 \\ \hline
-& & Respiratory Efficiency Test & & 49 \\ \hline
-& & Spirometry & & 51 \\ \hline
-& & Stethography & & 53 \\ \hline
-& & Examination of the Arterial Pulse & & 57 \\ \hline
-& & Examination Of Cardiovascular System & & 61 \\ \hline
-& & Recording of Blood Pressure & & 65 \\ \hline
-& & Effects of Posture and Exercise on Blood Pressure & & 69 \\ \hline
-& & Examination Of Sensory System & & 73 \\ \hline
-& & Examination Of Motor System & & 79 \\ \hline
-& & Reflexes & & 87 \\ \hline
-& & Cerebellar Function Tests & & 93 \\ \hline
-& & Examination Of Cranial Nerves (1-6) & & 97 \\ \hline
-& & Examination Of Cranial Nerves (7-12) & & 103 \\ \hline
+1 & & General Examination & & 37 \\ \hline
+2 & & Examination Of Respiratory System & & 43 \\ \hline
+3 & & Respiratory Efficiency Test & & 49 \\ \hline
+4 & & Spirometry & & 51 \\ \hline
+5 & & Stethography & & 53 \\ \hline
+6 & & Examination of the Arterial Pulse & & 57 \\ \hline
+7 & & Examination Of Cardiovascular System & & 61 \\ \hline
+8 & & Recording of Blood Pressure & & 65 \\ \hline
+9 & & Effects of Posture and Exercise on Blood Pressure & & 69 \\ \hline
+10 & & Examination Of Sensory System & & 73 \\ \hline
+11 & & Examination Of Motor System & & 79 \\ \hline
+12 & & Reflexes & & 87 \\ \hline
+13 & & Cerebellar Function Tests & & 93 \\ \hline
+14 & & Examination Of Cranial Nerves (1-6) & & 97 \\ \hline
+15 & & Examination Of Cranial Nerves (7-12) & & 103 \\ \hline
 \end{tabular}
  }
  \end{table}
